// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shebang.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
#!/usr/bin/env node
function a() {}

=====================================output=====================================
#!/usr/bin/env node
function a() {}

================================================================================
`;

exports[`shebang-newline.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
#!/usr/bin/env node

function a() {}

=====================================output=====================================
#!/usr/bin/env node

function a() {}

================================================================================
`;

exports[`snippet: Empty file with shebang format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
#!/usr/bin/env node
=====================================output=====================================
#!/usr/bin/env node

================================================================================
`;

exports[`snippet: Empty file with shebang format 2`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
#!/usr/bin/env node

=====================================output=====================================
#!/usr/bin/env node

================================================================================
`;
